samples/_failures_safe/1761178285_fde9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_615bbbe1.c: In function ‘main’:
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: expected expression at end of input
  153 |                     add_matrices(&mat1, &
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: too few arguments to function ‘add_matrices’
./samples/SAFE/__tmp_615bbbe1.c:64:6: note: declared here
   64 | void add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: expected declaration or statement at end of input
  153 |                     add_matrices(&mat1, &
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_615bbbe1.c:153:21: error: expected declaration or statement at end of input
